src/test/resources/validation/error/implicitJoinFailure/schema.graphqls
type Query {
  address(id: ID!): Address
}

type Address @table {
  id: ID!
  customers: [Customer!] @splitQuery # Should be ok, exists key join between CUSTOMER and ADDRESS.
  films: [Film!] @splitQuery # Should fail, no join can be deduced between FILM and ADDRESS.
}

type Customer @table {
  id: ID!
}

type Film @table {
  id: ID!
}
